# Enveil

./: .gitignore  README.md  config copy.json  main.py  pyproject.toml
env_info/: __init__.py  main.py
enveil/core/: platform_detector.py
enveil/utils/: security.py
specs/cross-platform-env-tool/: design.md  memory.md  needs.md  requirements.md  tasks.md
src/enveil/: __init__.py  api.py  main.py
src/enveil/collectors/: base_collector.py  hardware_collector.py  os_collector.py
src/enveil/config/: config_manager.py  default_software.py
src/enveil/core/: command_executor.py
src/enveil/utils/: security.py
tests/: test_api.py  test_command_executor.py  test_config_manager.py  test_hardware_collector.py  test_main.py  test_os_collector.py
