[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enveil"
version = "0.1.0"
description = "A tool to retrieve environment information"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.6"
dependencies = []  # 必要な依存関係があればここに追加

[project.scripts]
enveil = "enveil.main:main"  # コマンドラインから実行可能にする

[dependency-groups]
dev = [
    "pytest>=7.0.1",
]
